Socks_Shop/Kubernetes/service.yaml
# The service.yaml file is used to define the service for the front-end of the Socks Shop application.
#The service is defined with the name socks-shop-web-service and the label app: socks shop. 
#The service is exposed on port 80 and targets port 8079. 
#The service is of "type" NodePort which exposes the service externally with a random port.

# Add the Service definition below
apiVersion: v1
kind: Service
metadata:
  name: socks-shop-web-service
spec:
  selector:
    app: socks-shop
  ports:
    - port: 8081 # Exposes service on port 8081
      targetPort: 8081 # Matches container port
  type: NodePort # Exposes service externally with a random port
  ---
